--- a/styles.css
+++ b/styles.css
@@ -126,11 +126,15 @@ justify-content: center;
     padding: 20px;
     border: 1px solid #888;
     width: 60%;
-    height: 40%; /* Could be more or less, depending on screen size */
+    height: 40%; 
+    font-size: xx-large;/* Could be more or less, depending on screen size */
   }
   .close{
       float: right;
-      font-size:3rem;
+      font-size:1.5rem;
+      width: 40px;
+      height: 40px;
+      border: none;
   }
   .close:hover{
       color: rgb(151, 151, 151);
